--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         ]
     },
     "require": {
-        "laravel/framework": "~5.2.0|~5.3.0|~5.4.0",
+        "laravel/framework": "~5.2.0|~5.3.0|~5.4.0|5.7.*",
         "jeroennoten/laravel-package-helper": "^3.1",
         "league/flysystem": "^1.0.8",
         "intervention/image": "^2.3"
